--- a/package.json
+++ b/package.json
@@ -43,15 +43,18 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/supabase-js": "^2.50.2",
+    "@supabase/supabase-js": "^2.51.0",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "multer": "^2.0.1",
     "next": "^15.3.5",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
