new file:   .kiro/specs/database-integrity-fixes/design.md new file:   .kiro/specs/database-integrity-fixes/requirements.md new file:   .kiro/specs/database-integrity-fixes/tasks.md new file:   .kiro/specs/feature-cleanup-and-incremental-rebuild/design.md new file:   .kiro/specs/feature-cleanup-and-incremental-rebuild/requirements.md new file:   .kiro/specs/feature-cleanup-and-incremental-rebuild/tasks.md 	new file:   .kiro/specs/user-session-management/design.md new file:   .kiro/specs/user-session-management/requirements.md new file:   .kiro/specs/user-session-management/tasks.md new file:   add_missing_columns.sql new file:   add_test_videos.sql new file:   apply_views_migration.sql new file:   apply_views_system.sql 	new file:   check_auth_status.sql 	new file:   check_database_status.sql 	new file:   check_functions_and_triggers.sql 	new file:   check_profiles_and_auth.sql 	new file:   check_video_urls.sql 	new file:   check_videos_simple.sql 	modified:   clear_all_likes_and_fix_sync.sql 	modified:   clear_video_likes.sql 	modified:   complete_like_fix.sql 	new file:   complete_user_deletion.sql 	new file:   create_check_user_liked_video_function.sql 	new file:   create_record_video_view_function.sql 	modified:   create_sessions_table.sql 	new file:   create_user_session_simple.sql 	new file:   create_user_session_simple_summary.md 	modified:   database_schema.sql 	new file:   debug_detailed_view.sql 	new file:   debug_frontend_counts.sql 	new file:   debug_function_step_by_step.sql 	new file:   debug_like_duplication.sql 	new file:   debug_like_status.sql 	new file:   debug_profile_query.sql 	new file:   debug_videos_issue.sql 	new file:   debug_view_function.sql 	new file:   diagnose_function_issue.sql 	new file:   diagnose_views_system.sql 	modified:   disable_like_triggers.sql 	modified:   disable_realtime_fix.sql 	new file:   drop_exact_function.sql 	new file:   enable_like_triggers.sql 	modified:   enable_realtime.sql 	modified:   enable_realtime_simple.s

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "jsx": "react-jsx", // or "react" for older versions
+    "lib": ["DOM", "DOM.Iterable", "ES6"],
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "skipLibCheck": true,
