deleted:    .github/workflows/deploy.yml 	new file:   create_comments_table.sql 	modified:   index.html 	modified:   package.json 	deleted:    public/404.html 	modified:   src/App.tsx 	modified:   src/components/BottomNavigation.tsx 	new file:   src/components/CommentsModal.tsx 	modified:   src/components/ModalVerticalFeed.tsx 	modified:   src/hooks/useUnreadCount.tsx 	modified:   src/integrations/supabase/types.ts 	modified:   src/pages/Feed.tsx modified:   src/pages/Inbox.tsx 	modified:   src/pages/Profile.tsx 	modified:   src/pages/Trending.tsx 	modified:   vite.config.ts

--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://murrentronics.github.io/limey-app",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "build:gh-pages": "vite build --base=/limey-app/"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
