--- a/package.json
+++ b/package.json
@@ -57,8 +57,6 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "multer": "^2.0.1",
-
-
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -85,7 +83,7 @@
     "@types/phoenix": "^1.6.6",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
